--- a/Daily.html
+++ b/Daily.html
@@ -36,7 +36,7 @@ tr:nth-child(even) {
     <td>Page Promte $5</td>
     <td>20,000</td>
     <td>2,225</td>
-    <td>Unpaid</td>
+    <td>Paid</td>
   </tr>
   <tr>
     <td>2. Zaw Ko Ko Tun</td>
