--- a/Daily.html
+++ b/Daily.html
@@ -21,7 +21,7 @@ tr:nth-child(even) {
 </head>
 <body>
 
-<h2>17/Sat/2/Feb/2024</h2>
+
 
 <table>
   <tr>
@@ -30,6 +30,9 @@ tr:nth-child(even) {
     <th>Amount</th>
     <th>Profit</th>
     <th>Status</th>
+  </tr>
+  <tr>
+    <td><h5>17/Sat/2/Feb/2024</h5></td>
   </tr>
   <tr>
     <td>1. Tinzar Htoo</td>
@@ -71,6 +74,57 @@ tr:nth-child(even) {
     <td>Post Boost $10</td>
     <td>40,000</td>
     <td>4,450</td>
+    <td>Paid</td>
+  </tr>
+  <tr>
+    <td><h5>19/Mon/2/Feb/2024</h5></td>
+  </tr>
+  <tr>
+    <td>7. Theint Hsu Nway</td>
+    <td>Post Boost $10</td>
+    <td>41,000</td>
+    <td>5,300</td>
+    <td>Paid</td>
+  </tr> 
+  <tr>
+    <td><h5>20/Tue/2/Feb/2024</h5></td>
+  </tr>
+  <tr>
+    <td>8. Pu Tuu</td>
+    <td>Page Like + Follower 2K</td>
+    <td>10,000</td>
+    <td>7,000</td>
+    <td>Paid</td>
+  </tr> 
+  <tr>
+    <td>9. Pu Tuu</td>
+    <td>Post React (love) 1K</td>
+    <td>3,500</td>
+    <td>2,300</td>
+    <td>Paid</td>
+  </tr> 
+  <tr>
+    <td>10. Pu Tuu</td>
+    <td>Tiktok View 1K</td>
+    <td>800</td>
+    <td>800</td>
+    <td>Paid</td>
+  </tr>
+  <tr>
+    <td>11. Pu Tuu</td>
+    <td>Page Like + Follower 1K</td>
+    <td>5,000</td>
+    <td>3,500</td>
+    <td>Paid</td>
+  </tr>
+  <tr>
+    <td><h5>21/Wed/2/Feb/2024</h5></td>
+  </tr>
+  <tr>
+    <td>12. Pu Tuu</td>
+    <td>Page Like + Follower 10K</td>
+    <td>45,000</td>
+    <td>30,000</td>
     <td>Paid</td>
   </tr>
 </table>
