--- a/Daily.html
+++ b/Daily.html
@@ -1,133 +1,21 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-<style>
-table {
-  font-family: arial, sans-serif;
-  border-collapse: collapse;
-  width: 100%;
-}
-
-td, th {
-  border: 1px solid #dddddd;
-  text-align: left;
-  padding: 8px;
-}
-
-tr:nth-child(even) {
-  background-color: #dddddd;
-}
-</style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="index.css">
+  <title>Daily Note</title>
 </head>
 <body>
-
-
-
-<table>
-  <tr>
-    <th>Customers Name</th>
-    <th>Work</th>
-    <th>Amount</th>
-    <th>Profit</th>
-    <th>Status</th>
-  </tr>
-  <tr>
-    <td><h5>17/Sat/2/Feb/2024</h5></td>
-  </tr>
-  <tr>
-    <td>1. Tinzar Htoo</td>
-    <td>Page Promte $5</td>
-    <td>20,000</td>
-    <td>2,225</td>
-    <td>Paid</td>
-  </tr>
-  <tr>
-    <td>2. Zaw Ko Ko Tun</td>
-    <td>Page Promte $5</td>
-    <td>21,500</td>
-    <td>3,725</td>
-    <td>Paid</td>
-  </tr>
-  <tr>
-    <td>3. Ma Hlaing</td>
-    <td>Post Boost $20</td>
-    <td>84,000</td>
-    <td>12,900</td>
-    <td>Paid</td>
-  </tr>
-  <tr>
-    <td>4. Pu Tuu</td>
-    <td>Tiktok Followers 1K</td>
-    <td>8,500</td>
-    <td>2,000</td>
-    <td>Paid</td>
-  </tr>
-  <tr>
-    <td>5. Htoo Htet Kaung Yan</td>
-    <td>Facebook Service Class</td>
-    <td>50,000</td>
-    <td>50,000</td>
-    <td>Paid</td>
-  </tr>
-  <tr>
-    <td>6. Theint Hsu Nway</td>
-    <td>Post Boost $10</td>
-    <td>40,000</td>
-    <td>4,450</td>
-    <td>Paid</td>
-  </tr>
-  <tr>
-    <td><h5>19/Mon/2/Feb/2024</h5></td>
-  </tr>
-  <tr>
-    <td>7. Theint Hsu Nway</td>
-    <td>Post Boost $10</td>
-    <td>41,000</td>
-    <td>5,300</td>
-    <td>Paid</td>
-  </tr> 
-  <tr>
-    <td><h5>20/Tue/2/Feb/2024</h5></td>
-  </tr>
-  <tr>
-    <td>8. Pu Tuu</td>
-    <td>Page Like + Follower 2K</td>
-    <td>10,000</td>
-    <td>7,000</td>
-    <td>Paid</td>
-  </tr> 
-  <tr>
-    <td>9. Pu Tuu</td>
-    <td>Post React (love) 1K</td>
-    <td>3,500</td>
-    <td>2,300</td>
-    <td>Paid</td>
-  </tr> 
-  <tr>
-    <td>10. Pu Tuu</td>
-    <td>Tiktok View 1K</td>
-    <td>800</td>
-    <td>800</td>
-    <td>Paid</td>
-  </tr>
-  <tr>
-    <td>11. Pu Tuu</td>
-    <td>Page Like + Follower 1K</td>
-    <td>5,000</td>
-    <td>3,500</td>
-    <td>Paid</td>
-  </tr>
-  <tr>
-    <td><h5>21/Wed/2/Feb/2024</h5></td>
-  </tr>
-  <tr>
-    <td>12. Pu Tuu</td>
-    <td>Page Like + Follower 10K</td>
-    <td>45,000</td>
-    <td>30,000</td>
-    <td>Paid</td>
-  </tr>
-</table>
-
+  <div class="dai">
+    <div class="fbx">
+        <a class="btn" href="D172.html" target="_self">17/2/2024</a>
+        <a class="btn" href="D192.html" target="_self">19/2/2024</a>
+        <a class="btn" href="D202.HTML" target="_self">20/2/2024</a>
+        <a class="btn" href="D212.html" target="_self">21/2/2024</a>
+        <a class="btn" href="D222.html" target="_self">22/2/2024</a>
+    </div>
+ </div>
+  
 </body>
 </html>
