--- a/Daily.html
+++ b/Daily.html
@@ -11,7 +11,7 @@
     <div class="fbx">
         <a class="btn" href="D172.html" target="_self">17/2/2024</a>
         <a class="btn" href="D192.html" target="_self">19/2/2024</a>
-        <a class="btn" href="D202.HTML" target="_self">20/2/2024</a>
+        <a class="btn" href="D202.html" target="_self">20/2/2024</a>
         <a class="btn" href="D212.html" target="_self">21/2/2024</a>
         <a class="btn" href="D222.html" target="_self">22/2/2024</a>
     </div>
